--- a/index.html
+++ b/index.html
@@ -37,18 +37,59 @@
                 </ul>
             </nav>
             <div class="nine columns">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-                <blockquote>
-                    lorem Ipusm dolor sit amet
-                    <cite>- Griechischer Typ</cite>
-                </blockquote>
+                <div class="mod-start-teaser">
+                    <div class="img">
+                        <img src="http://placehold.it/200x150" alt="">
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        <blockquote>
+                            <p>
+                                lorem Ipusm dolor <cite>lorem ipsum</cite> sit amet
+                            </p>
+                            <footer class="source">
+                                <a href="#">some greek guy</a>
+                            </footer>
+                        </blockquote>
+                    </p>
+                </div>
+
+                <!-- Beginn Kitchen Sink -->
+                <h1>HTML Ipsum Presents</h1>
+
+                <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+
+                <h2>Header Level 2</h2>
+
+                <ol>
+                   <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+                   <li>Aliquam tincidunt mauris eu risus.</li>
+                </ol>
+
+                <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p></blockquote>
+
+                <h3>Header Level 3</h3>
+
+                <ul>
+                   <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+                   <li>Aliquam tincidunt mauris eu risus.</li>
+                </ul>
+
+                <pre><code>
+                #header h1 a {
+                    display: block;
+                    width: 300px;
+                    height: 80px;
+                }
+                </code></pre>
+
+                <!-- End Kitchen Sink -->
+
                 <div class="row">
                     <div class="six columns">
                         <h1>H1 Headline</h1>
@@ -92,6 +133,15 @@
                     <li><a href="">Link-7</a></li>
                 </ol>
             </div>
+            <ul class="pagination twelve columns">
+                <li class="pagination-first"><a href="#">First</a></li>
+                <li clasS="pagination-prev"><a href="#">Previous</a></li>
+                <li><a href="#">1</a></li>
+                <li class="current"><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li class="pagination-next"><a href="#">Next</a></li>
+                <li class="pagination-last"><a href="#">Last</a></li>
+            </ul>
             <footer class="twelve columns">
                 <p>Hier ist der Footer</p>
             </footer>
