--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <!-- Beginn Kitchen Sink -->
                 <h1>HTML Ipsum Presents</h1>
 
-                <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+                <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, <small> SMALL feugiat vitae,</small> ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>EM Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>CODE commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
 
                 <h2>Header Level 2</h2>
 
@@ -70,6 +70,11 @@
                    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
                    <li>Aliquam tincidunt mauris eu risus.</li>
                 </ol>
+
+                <dl>
+                    <dt>Definition List</dt>
+                    <dd>lorem ipsum dolor sit amet Vivamus magna. Cras in mi at felis aliquet congue. </dd>
+                </dl>
 
                 <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p></blockquote>
 
@@ -81,11 +86,11 @@
                 </ul>
 
                 <pre><code>
-                #header h1 a {
-                    display: block;
-                    width: 300px;
-                    height: 80px;
-                }
+#header h1 a {
+    display: block;
+    width: 300px;
+    height: 80px;
+}
                 </code></pre>
 
                 <!-- End Kitchen Sink -->
