added button object

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                 </ul>
             </nav>
             <div class="nine columns">
+
+
+                <h1>HTML Ipsum Presents</h1>
+
+                <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, <small> SMALL feugiat vitae,</small> ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>EM Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>CODE commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+
+
                 <div class="mod-start-teaser">
                     <div class="img">
                         <img src="http://placehold.it/200x150" alt="">
@@ -60,12 +67,32 @@
                 </div>
 
                 <!-- Beginn Kitchen Sink -->
-                <h1>HTML Ipsum Presents</h1>
 
-                <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, <small> SMALL feugiat vitae,</small> ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>EM Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>CODE commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+                <h2>Buttons and a H2 Headline</h2>
+                <div class="row">
+                    <div class="four columns">
+                        <h4>Size</h4>
+                        <a href="" class="btn tiny">Tiny</a><br> <br>
+                        <a href="" class="btn small">Small</a><br> <br>
+                        <a href="" class="btn normal">Normal</a><br> <br>
+                        <a href="" class="btn big">Big Button</a>
+                    </div>
+                    <div class="four columns">
+                        <h4>Style</h4>
+                        <a href="" class="btn square">Squared Form</a><br><br>
+                        <a href="" class="btn radius">Radius Form</a><br><br>
+                        <a href="" class="btn pill">Pill Form</a>
+                    </div>
+                    <div class="four columns">
+                        <h4>State</h4>
+                        <a href="" class="btn primary">Primary</a><br><br>
+                        <a href="" class="btn secondary">Secondary</a><br><br>
+                        <a href="" class="btn alert">Alert</a><br><br>
+                        <a href="" class="btn success">Success</a>
+                    </div>
+                </div>
 
-                <h2>Header Level 2</h2>
-
+                <h3>Ordered List</h3>
                 <ol>
                    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
                    <li>Aliquam tincidunt mauris eu risus.</li>
