added island object and improved buttons

--- a/index.html
+++ b/index.html
@@ -91,6 +91,29 @@
                         <a href="" class="btn success">Success</a>
                     </div>
                 </div>
+                <h3>Button Group</h3>
+                <ul class="btn-group">
+                    <li><a class="btn" href="">First</a></li>
+                    <li><a class="btn" href="">Second</a></li>
+                    <li><a class="btn" href="">Last</a></li>
+                </ul>
+                <br> <br>
+
+                <h3>Button Group Radius</h3>
+                <ul class="btn-group radius">
+                    <li><a href="" class="btn">First</a></li>
+                    <li><a href="" class="btn">Second</a></li>
+                    <li><a href="" class="btn">Third</a></li>
+                    <li><a href="" class="btn">Last</a></li>
+                </ul>
+
+                <br> <br>
+
+                <div class="my-module">
+                    <div class="inner">
+                        lorem ipsum dolor sit amet
+                    </div>
+                </div>
 
                 <h3>Ordered List</h3>
                 <ol>
