added vertical menu in nav object

--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
                 <br> <br>
 
                 <div class="my-module">
-                    <div class="inner">
+                    <h3>island object</h3>
                         lorem ipsum dolor sit amet
-                    </div>
                 </div>
 
                 <h3>Ordered List</h3>
@@ -168,7 +167,7 @@
             </div>
             <div class="three columns">
                 <h3>Unorderd List</h3>
-                <ul>
+                <ul class="vertical-navigation">
                     <li><a href="">Link-1</a></li>
                     <li><a href="">Link-2</a></li>
                     <li><a href="">Link-3</a></li>
