--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta name="content-language" content="de" />
     <meta name="robots" content="index,follow" />
 
+    <!-- Modernizr -->
+    <script type="text/javascript" src="js/libs/modernizr-dev.js"></script>
+
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" />
 
@@ -203,6 +206,9 @@
                 <p>Hier ist der Footer</p>
             </footer>
         </div>
-
+        <!-- jQuery -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <!-- Custom Plugins -->
+        <script type="text/javascript" src="js/plugins.js"></script>
     </body>
 </html>
