--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="header">
                     <h1>Shepherd</h1>
                 </div>
-                <div>
+                <!-- <div>
                     <ul class="navigation">
                         <li><a href="#">Start</a></li>
                         <li><a href="#">Grid</a></li>
@@ -40,7 +40,7 @@
                         <li><a href="#">Placeholder</a></li>
                         <li><a href="#">Modules</a></li>
                     </ul>
-                </div>
+                </div> -->
 
             </div>
             <div class="content eight columns">
@@ -211,6 +211,7 @@
                 <p>...to be continued.</p>
 
                 <h2>Modules</h2>
+                <p>coming soon, its late</p>
             </div>
         </div>
 
