--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <li><a href="#placeholder">Placeholder</a></li>
                         <li><a href="#oocss">OOCSS</a></li>
                         <li><a href="#module">Modules</a></li>
+                        <li>more coming soon...</li>
                     </ul>
                 </div>
 
