--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
     <body>
 
-        <div class="row">
+        <div class="row wrapper">
             <header class="twelve columns">
                 <h1>Dies ist der Header</h1>
             </header>
